--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -4,6 +4,7 @@
     package="com.albertogomez.ewend">
 
     <uses-feature android:glEsVersion="0x00020000" android:required="true" />
+        <uses-permission android:name="android.permission.VIBRATE"/>
 
     <application
         android:allowBackup="true"
@@ -13,6 +14,7 @@
         android:appCategory="game"
         android:label="@string/app_name"
         tools:ignore="UnusedAttribute">
+
         <activity
             android:name="com.albertogomez.ewend.AndroidLauncher"
             android:label="@string/app_name" 
