Added the menu and fixed the load screen

--- a/assets/ui/strings.properties
+++ b/assets/ui/strings.properties
@@ -1,3 +1,9 @@
-hola=hello
+exit=Exit
 loading=Loading...
-pressAnyKey=Press any key
+mapping=Mapping
+options=Options
+pressTheScreen=Press the screen to start
+records=Records
+save=Save Changes
+sound=Sound
+start=Start
