--- a/assets/ui/strings.properties
+++ b/assets/ui/strings.properties
@@ -1,9 +1,12 @@
+congratulations=Congratulations\nYou are free
 exit=Exit
 loading=Loading...
 mapping=Mapping
+menu=Menu
 options=Options
 pressTheScreen=Press the screen to start
 records=Records
+restart=Restart
 save=Save Changes
 sound=Sound
 start=Start
